--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "lib": ["ES2020"],
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "outDir": "dist",
     "rootDir": "src",
-    "skipLibCheck": true,
-    "resolveJsonModule": true,
+    "incremental": true,
+    "sourceMap": true,
+    "noEmitOnError": true,
     "typeRoots": ["./src/types", "./node_modules/@types"]
   },
   "include": ["src"]
